--- a/src/ui/listType.css
+++ b/src/ui/listType.css
@@ -1,6 +1,8 @@
 .container {
   background: #fffefe;
-  border: 1px solid #bdb5b5;
+  border-color: #bdb5b5;
+  border-style: solid;
+  border-width: 1px;
   display: grid;
   grid-gap: 10px;
   grid-template-columns: auto auto auto;
