--- a/src/ui/czi-cust-style-numbered.css
+++ b/src/ui/czi-cust-style-numbered.css
@@ -9,6 +9,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C2 C3 C4 C5 C6 C7 C8 C9 C10;
+  margin-left: 12pt;
 }
 
 .ProseMirror p[data-style-level='2'] {
@@ -16,6 +17,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C3 C4 C5 C6 C7 C8 C9 C10;
+  margin-left: 16pt;
 }
 
 .ProseMirror p[data-style-level='3'] {
@@ -23,6 +25,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C4 C5 C6 C7 C8 C9 C10;
+  margin-left: 25pt;
 }
 
 .ProseMirror p[data-style-level='4'] {
@@ -30,6 +33,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C5 C6 C7 C8 C9 C10;
+  margin-left: 37pt;
 }
 
 .ProseMirror p[data-style-level='5'] {
@@ -37,6 +41,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C6 C7 C8 C9 C10;
+  margin-left: 46pt;
 }
 
 .ProseMirror p[data-style-level='6'] {
@@ -44,6 +49,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C7 C8 C9 C10;
+  margin-left: 56pt;
 }
 
 .ProseMirror p[data-style-level='7'] {
@@ -51,6 +57,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C8 C9 C10;
+  margin-left: 65pt;
 }
 
 .ProseMirror p[data-style-level='8'] {
@@ -58,6 +65,7 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C9 C10;
+  margin-left: 73pt;
 }
 
 .ProseMirror p[data-style-level='9'] {
@@ -65,10 +73,12 @@ html {
 
   /* Reset all other variables under the current one. */
   counter-reset: C10;
+  margin-left: 85pt;
 }
 
 .ProseMirror p[data-style-level='10'] {
   counter-increment: C10;
+  margin-left: 92pt;
 }
 
 .ProseMirror p[data-bullet-color='#0000FF']::before {
@@ -82,6 +92,12 @@ html {
 .ProseMirror p[data-show-bullet='true']::before {
   content: attr(data-bullet-symbol) !important;
   font-weight: normal !important;
+  margin-left: -12pt;
+  font-size: var(--czi-content-font-size);
+}
+
+.ProseMirror p[data-show-bullet='true'] {
+  margin-left: 12pt;
 }
 
 .ProseMirror p[data-style-level='1'][hide-style-level='true']::before {
@@ -93,6 +109,8 @@ html {
 .ProseMirror p[data-style-level='1'][hide-style-level='false']::before {
   content: counter(C1, decimal) '. ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -12pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='2'][hide-style-level='true']::before {
@@ -104,6 +122,8 @@ html {
 .ProseMirror p[data-style-level='2'][hide-style-level='false']::before {
   content: counter(C1, decimal) '.' counter(C2, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -16pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='3'][hide-style-level='true']::before {
@@ -117,6 +137,8 @@ html {
   content: counter(C1, decimal) '.' counter(C2, decimal) '.'
     counter(C3, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left:  -25pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='4'][hide-style-level='true']::before {
@@ -130,6 +152,8 @@ html {
   content: counter(C1, decimal) '.' counter(C2, decimal) '.'
     counter(C3, decimal) '.' counter(C4, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -37pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='5'][hide-style-level='true']::before {
@@ -143,6 +167,8 @@ html {
   content: counter(C1, decimal) '.' counter(C2, decimal) '.'
     counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -46pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='6'][hide-style-level='true']::before {
@@ -158,6 +184,8 @@ html {
     counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
     counter(C6, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -56pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='7'][hide-style-level='true']::before {
@@ -173,6 +201,8 @@ html {
     counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
     counter(C6, decimal) '.' counter(C7, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -65pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='8'][hide-style-level='true']::before {
@@ -188,6 +218,8 @@ html {
     counter(C3, decimal) '.' counter(C4, decimal) '.' counter(C5, decimal) '.'
     counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -73pt;
+  font-size: var(--czi-content-font-size);
 }
 
 .ProseMirror p[data-style-level='9'][hide-style-level='true']::before {
@@ -205,6 +237,8 @@ html {
     counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
     counter(C9, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  font-size: var(--czi-content-font-size);
+  margin-left: -85pt;
 }
 
 .ProseMirror p[data-style-level='10'][hide-style-level='true']::before {
@@ -222,4 +256,10 @@ html {
     counter(C6, decimal) '.' counter(C7, decimal) '.' counter(C8, decimal) '.'
     counter(C9, decimal) '.' counter(C10, decimal) ' ';
   font-weight: var(--czi-counter-bold);
+  margin-left: -92pt;
+  font-size: var(--czi-content-font-size);
+}
+
+.ProseMirror p[data-bullet-symbol='✪✪ ']::before {
+  margin-left: -20pt;
 }
