--- a/src/ui/icon-font.css
+++ b/src/ui/icon-font.css
@@ -4,7 +4,8 @@ Now loaded locally, so that it work in closed network as well. */
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'),
-    url('../../fonts/material-icons/MaterialIcons-Regular.ttf')
-      format('truetype');
+  src:
+    local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url('../fonts/material-icons/MaterialIcons-Regular.ttf') format('truetype');
 }
