--- a/src/ui/icon-font.css
+++ b/src/ui/icon-font.css
@@ -5,6 +5,6 @@ Now loaded locally, so that it work in closed network as well. */
   font-style: normal;
   font-weight: 400;
   src: local('Material Icons'), local('MaterialIcons-Regular'),
-    url('../../fonts/material-icons/MaterialIcons-Regular.ttf')
+    url('../fonts/material-icons/MaterialIcons-Regular.ttf')
       format('truetype');
 }
