Modify and deselect applied bold, Italics & underline

--- a/src/ui/custom-style-edit.css
+++ b/src/ui/custom-style-edit.css
@@ -321,6 +321,12 @@
   background: transparent;
 }
 
+.czi-editor-frameset .molsp-formatbuttons {
+  outline: none;
+  border-color: transparent;
+}
+
+
 .czi-editor-frameset .molsp-fontstyle {
   font-size: 13px;
 }
