--- a/src/ui/custom-dropdown.css
+++ b/src/ui/custom-dropdown.css
@@ -12,6 +12,19 @@
   padding: 5px;
 }
 
+.czi-editor-frameset .molsp-dropbtn.dark {
+  background-color: #333;
+  border-color: #555;
+  color: #ddd;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.8);
+}
+
+.czi-editor-frameset .molsp-dropbtn.light {
+  background-color: #fff;
+  border-color: #cec7c7;
+  color: #5a615e;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 .czi-editor-frameset .molsp-stylenames {
   max-height: 205px;
   min-height: 30px;
@@ -31,6 +44,14 @@
   height: 95px;
   line-height: 0.75;
   width: max-content;
+}
+
+.czi-editor-frameset .div-height-large {   
+  height: 95px; 
+}
+
+.czi-editor-frameset .div-height-small {   
+  height: 35px; 
 }
 
 .czi-editor-frameset .molsp-dropdown-content a {
