Feature: Hide numbering feature for a particular style is implemented

--- a/src/ui/czi-cust-style-numbered.css
+++ b/src/ui/czi-cust-style-numbered.css
@@ -429,3 +429,7 @@ html {
 .ProseMirror p[data-bullet-symbol='✪✪ ']::before {
   margin-left: -20pt;
 }
+
+.ProseMirror p[hideNumbering='true']::before {
+  visibility: hidden;
+}
