Minor style changes.

--- a/src/ui/custom-style-edit.css
+++ b/src/ui/custom-style-edit.css
@@ -340,7 +340,7 @@
   border-width: 1px;
   box-sizing: border-box;
   margin-left: -1px;
-  padding: 5px;
+  padding: 4px;
   width: 100%;
 }
 
@@ -348,7 +348,7 @@
   box-sizing: content-box !important;
   color: #464343;
   font-size: 12px;
-  margin-bottom: 4px;
+  margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
   margin-top: 4px;
